--- a/module_shop_mall/src/main/res/values/strings.xml
+++ b/module_shop_mall/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="mall_shop_mall_app_name">module_shop_mall</string>
     <string name="mall_home_page">首页</string>
     <string name="mall_home_shop">商品</string>
-    <string name="mall_home_cart">购物车</string>
+    <string name="mall_home_mall">购物车</string>
     <string name="mall_home_find">发现</string>
     <string name="mall_home_message">消息</string>
     <string name="mall_home_self">我的</string>
@@ -36,7 +36,7 @@
     <string name="user_name">用户组件</string>
     <string name="user_info">用户：</string>
     <string name="user_app_name">TranslucentScrollView</string>
-    <string name="user_auther">作者:Bernie</string>
+    <string name="user_auther">Bernie</string>
     <string name="user_email">742228386@qq.com</string>
 
     <string name="user_shopping_car">购物车</string>
@@ -50,4 +50,26 @@
     <string name="user_start_luck">开始抽奖</string>
     <string name="user_invite_reward">邀请奖励</string>
     <string name="user_set">设置</string>
+
+    <!--登录-->
+    <string name="mall_login_find_pwd_hint_1">如忘记密码，请拨打客服热线--申请重置密码</string>
+    <string name="mall_login_find_pwd_hint_2">如忘记密码，请拨打客服热线</string>
+    <string name="mall_login_find_pwd_hint_3"> 申请重置密码</string>
+    <string name="mall_member_remark_1">如忘记密码请拨打客服热线--申请重置密码</string>
+    <string name="mall_member_remark_2">如忘记密码请拨打客服热线</string>
+    <string name="mall_member_remark_3">申请重置密码</string>
+    <string name="mall_login_login">登录</string>
+    <string name="mall_login_login_success">登录成功</string>
+    <string name="mall_login_login_fail">登录失败</string>
+    <string name="mall_login_username">用户名</string>
+    <string name="mall_login_pwd">密码</string>
+    <string name="mall_login_pwd_hint">请输入密码</string>
+    <string name="mall_login_tel_hint">请输入用户名</string>
+    <string name="mall_login_find_pwd_hint">如忘记密码，请拨打客服热线400-800-8888 申请重置密码</string>
+    <string name="mall_login_account_or_password_error">该用户名或密码输入有误，请重新输入.</string>
+    <string name="mall_login_account_exception">账号异常</string>
+    <string name="mall_login_user_disable">该用户已停用，请联系管理员.</string>
+    <string name="mall_login_account_disable">该账号停用，请联系管理员.</string>
+
+    <string name="mall_my_center_info_behavior">com.example.tome.module_shop_mall.widget.MyCenterBehavior</string>
 </resources>
