--- a/module_shop_mall/src/main/res/values/strings.xml
+++ b/module_shop_mall/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="mall_home_shop">商品</string>
     <string name="mall_home_mall">购物车</string>
     <string name="mall_home_find">发现</string>
+    <string name="mall_home_add">卖二手</string>
     <string name="mall_home_message">消息</string>
     <string name="mall_home_self">我的</string>
 
